--- a/src/apps/apps.css
+++ b/src/apps/apps.css
@@ -1,46 +1,48 @@
 .apps {
-    flex: 1;
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    border: 1px solid var(--bluegray-200);
-    /* box-shadow: 2px 2px 5px var(--bluegray-100); */
-  }
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+}
 
-  .apps__header {
-    padding: 0 1em;
-    flex: 0;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    background: var(--blue-800);
-  }
+.apps__header {
+  padding: 6px 8px;
+  flex: 0;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  background: #0e3f67; /*var(--blue-800);*/
+  border: 1px solid #0e3f67;
+}
 
-  .apps__header h2 {
-    color: white;
-    font-size: 16px;
-  }
+.apps__header h2 {
+  color: white;
+  font-size: 16px;
+  font-weight: bold;
+  margin-bottom: 0px;
+  line-height: 30px;
+}
 
-  .apps__launchpad {
-    padding: 1em;
-    margin: auto;
-  }
+.apps__launchpad {
+  padding: 1em;
+  margin: auto;
+}
 
-  .apps__card {
-    padding-top: 4px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    border: 1px solid gray;
-  }
+.apps__card {
+  padding-top: 4px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  border: 1px solid rgba(128, 128, 128, 0.591);
+}
 
-  .apps__name {
-    margin-bottom: 4px;
-    z-index: 999;
-    font-size: medium;
-  }
+.apps__name {
+  margin-bottom: 4px;
+  z-index: 999;
+  font-size: medium;
+}
 
-  .apps__actions {
-    margin-top: 4px;
-    text-align: right;
-  }
+.apps__actions {
+  margin-top: 4px;
+  text-align: right;
+}
