--- a/src/App.css
+++ b/src/App.css
@@ -18,7 +18,6 @@ section {
   margin-bottom: 3em;
 }
 
-
 footer {
   position: fixed;
   width: 100vw;
@@ -27,5 +26,5 @@ footer {
   text-align: center;
   padding: 0;
   margin: 0;
-  background: rgb(235, 235, 235); /*var(--bluegray-50)*/;
+  background: rgb(235, 235, 235); /*var(--bluegray-50)*/
 }
