--- a/src/components/apps.css
+++ b/src/components/apps.css
@@ -1,74 +1,76 @@
 .apps {
-	flex: 1;
-	display: flex;
-	flex-direction: column;
-	justify-content: flex-start;
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
 }
 
 .apps__header {
-	padding: 6px 8px;
-	flex: 0;
-	display: flex;
-	flex-direction: row;
-	justify-content: space-between;
-	background: #0e3f67; /*var(--blue-800);*/
-	border: 1px solid #0e3f67;
+    padding: 6px 8px;
+    flex: 0;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    background: #0e3f67;
+    /*var(--blue-800);*/
+    border: 1px solid #0e3f67;
 }
 
 .apps__header h2 {
-	color: white;
-	font-size: 16px;
-	font-weight: bold;
-	margin-bottom: 0px;
-	line-height: 30px;
+    color: white;
+    font-size: 16px;
+    font-weight: bold;
+    margin-bottom: 0px;
+    line-height: 30px;
 }
 
 .apps__launchpad {
-	padding: 8px 1em;
-	margin: auto;
-	display: flex;
-	flex-direction: column;
+    padding: 8px 1em;
+    margin: auto;
+    display: flex;
+    flex-direction: column;
 }
+
 .app__card {
-	margin: 4px;
-	padding: 4px;
-	display: flex;
-	flex-direction: column;
-	align-items: center;
-	justify-content: center;
-	border: 1px solid #a2a2a2;
-	background-color: #fffefe;
-	border-radius: 16px;
-	height: 80px;
-	width: 80px;
+    margin: 4px;
+    padding: 4px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    border: 1px solid #a2a2a2;
+    background-color: #fffefe;
+    border-radius: 16px;
+    height: 80px;
+    width: 80px;
 }
 
 .app__card :hover {
-	cursor: pointer;
+    cursor: pointer;
 }
 
 .app__card-img {
-	height: 64px;
-	width: 64px;
-	/* border: 1px solid rgba(128, 128, 128, 0.591); */
+    height: 64px;
+    width: 64px;
+    /* border: 1px solid rgba(128, 128, 128, 0.591); */
 }
 
 .app__card-img img {
-	object-fit: contain;	
+    object-fit: contain;
 }
 
 .apps__name {
-	margin-bottom: 4px;
-	z-index: 999;
-	font-size: medium;
+    margin-bottom: 4px;
+    z-index: 999;
+    font-size: medium;
 }
 
 .apps__actions {
-	margin-top: 4px;
-	text-align: right;
-	width: 80px;
+    margin-top: 4px;
+    text-align: right;
+    width: 80px;
 }
 
 .apps__action {
-	width: 80px;
+    width: 80px;
 }
