--- a/src/components/apps.css
+++ b/src/components/apps.css
@@ -6,7 +6,7 @@
 }
 
 .apps__header {
-	padding: 4px 8px;
+	padding: 6px 8px;
 	flex: 0;
 	display: flex;
 	flex-direction: row;
@@ -24,22 +24,23 @@
 }
 
 .apps__launchpad {
-	padding: 1em;
+	padding: 8px 1em;
 	margin: auto;
 	display: flex;
 	flex-direction: column;
-	background-color: #e3e3e3;
 }
 .app__card {
-	margin: 4px 0;
+	margin: 4px;
 	padding: 4px;
 	display: flex;
 	flex-direction: column;
 	align-items: center;
 	justify-content: center;
-	border: 1px solid #8e8e8e;
-	background-color: #ffffff;
-	border-radius: 8px;
+	border: 1px solid #a2a2a2;
+	background-color: #fffefe;
+	border-radius: 16px;
+	height: 80px;
+	width: 80px;
 }
 
 .app__card :hover {
