--- a/src/components/data.css
+++ b/src/components/data.css
@@ -7,17 +7,22 @@
 }
 
 .data__header {
-    padding: 0 1em;
+    padding: 4px 8px;
     flex: 0;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    align-items: center;
+    border: 1px solid #0e3f67;
     background: var(--bluegray-600);
 }
 
 .data__header h2 {
     color: white;
     font-size: 16px;
+    font-weight: bold;
+    margin-bottom: 0px;
+    line-height: 30px;
 }
 
 .data__browser {
