--- a/src/App.css
+++ b/src/App.css
@@ -2,3 +2,25 @@
 	overflow-y: hidden;
 	overflow-x: hidden;
 }
+
+/* NextClooud overrides overrides */
+div.select2-drop .select2-search input, select, button:not(.button-vue), .button, input:not([type='range']), textarea, div[contenteditable=true], .pager li a {
+    margin: 3px 3px 3px 0;
+    padding: 7px 7px;
+    font-size: 13px;
+    background-color: var(--color-main-background);
+    color: var(--color-main-text);
+    border: 1px solid var(--color-border-dark);
+    outline: none;
+    /* border-radius: var(--border-radius); */
+    cursor: text;
+}
+
+select, button:not(.button-vue), .button, input[type='button'], input[type='submit'], input[type='reset'] {
+    /* padding: 6px 16px; */
+    width: auto;
+    /* min-height: 34px; */
+    /* cursor: pointer; */
+    /* box-sizing: border-box; */
+    /* background-color: var(--color-background-dark); */
+}
